# ComfyUI-Copilot

ComfyUI/: CODEOWNERS  README.md  (+15 more)
ComfyUI/custom_nodes/ComfyUI-Copilot/: Authors.txt  HOW_TO_USE_LMSTUDIO.md  LICENSE  LMSTUDIO_IMPLEMENTATION.md  LMSTUDIO_SETUP.md  NOTICE.txt  README.md  README_CN.md  __init__.py  command  index.html  package-lock.json  postcss.config.js  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/: agent_factory.py  core.py
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/controller/: conversation_api.py  expert_api.py  llm_api.py
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/dao/: expert_table.py  workflow_table.py
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/data/: rewrite_expert.db  workflow_debug.db  workflow_rewrite_expert.json
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/service/: debug_agent.py  link_agent_tools.py  mcp_client.py  parameter_tools.py  workflow_rewrite_agent.py  workflow_rewrite_tools.py
ComfyUI/custom_nodes/ComfyUI-Copilot/backend/utils/: auth_utils.py  comfy_gateway.py  globals.py  logger.py  request_context.py  string_utils.py
ComfyUI/custom_nodes/ComfyUI-Copilot/entry/: comfyui-bridge.js  entry.js
ComfyUI/custom_nodes/ComfyUI-Copilot/locales/en/: main.json
ComfyUI/custom_nodes/ComfyUI-Copilot/locales/zh/: commands.json
ComfyUI/custom_nodes/ComfyUI-Copilot/public/showcase/: showcase.json  showcase_en.json
ComfyUI/custom_nodes/ComfyUI-Copilot/scripts/: setupGitHooks.js
ComfyUI/custom_nodes/ComfyUI-Copilot/ui/: package.json  tailwind.config.js
(+450 files in other folders)
