[project]
name = "ComfyUI-Copilot"
description = "Your Intelligent Assistant for Comfy-UI."
version = "2.0.4"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AIDC-AI/ComfyUI-Copilot"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "yx9966"
DisplayName = "ComfyUI-Copilot"
Icon = ""
